# django-shelf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  scripts.py  tox.ini
.github/: dependabot.yml
.github/workflows/: pytest.yaml  release.yaml
admin_shelf/: admin.py  apps.py  settings.py  typing.py
django_shelf/: admin.py  apps.py  settings.py  typing.py
example/: admin.py  asgi.py  models.py  settings.py  start-example.sh  urls.py  wsgi.py
example/locale/pt_BR/LC_MESSAGES/: django.po
example/migrations/: 0001_initial.py  0002_fourth.py
tests/: test_admin.py  test_admin_site.py  test_i18n.py
tests/locale/pt_BR/LC_MESSAGES/: django.po
